# hubnity-desktop

./: .gitignore  100_PERCENT_PROOF.md  ACTIVE_WINDOW_IMPLEMENTATION.md  ARCHITECTURE_ANALYSIS.md  BUSINESS_LOGIC_ISSUES.md  CLOCK_SKEW_FIX.md  COMPREHENSIVE_CORRECTNESS_AUDIT.md  CORE_SYSTEM_STATUS.md  CORRECTNESS_FIXES_PROOF.md  CURRENT_ISSUES_REPORT.md  DEVELOPMENT_STATUS_REPORT.md  DUPLICATE_TASKS_FIX.md  E2E_TESTING.md  ETAP1_5_FRONTEND_REPORT.md  ETAP1_TIMER_ENGINE.md  ETAP1_VERIFICATION.md  ETAP2_FSM_REPORT.md  ETAP3_SQLITE_REPORT.md  ETAP4_SLEEP_WAKE_REPORT.md  FAILED_TASKS_ANALYSIS.md  FAILED_TASKS_DIAGNOSTICS.md  FIXES_APPLIED.md  FIXES_PROGRESS.md  FIX_RUNTIME_ERROR.md  FRONTEND_PRODUCTION_READINESS_REPORT.md  FRONTEND_QA_ARCHITECT_REPORT.md  FRONTEND_TODO_LIST.md  FUNCTIONALITY_PROOF_SUMMARY.md  HARDENING_APPLIED.md  HARDENING_FIXES.md  IMPLEMENTATION.md  INVARIANTS_VERIFICATION.md  LOGIN_BUGS_REPORT.md  MISSING_FEATURES.md  NEXT_STEPS.md  OBJECTIVE_C_EXCEPTION_FIX.md  OFFLINE_QUEUE_INTEGRATION_REPORT.md  PRODUCTION_CORRECTNESS_AUDIT.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_FINAL.md  (+39 more)
coverage/: clover.xml  coverage-final.json  index.html
docs/: AUDIT_REPORT.md  BUGS_FOUND.md  CHANGES_PROOF.md  CHAOS_AUDIT.md  CRITICAL_FIXES.md  DEBUG_LOGGING.md  DEEP_POLISH_AUDIT.md  FINAL_POLISH_ANALYSIS.md  FRONTEND_AUDIT.md  LOGIC_CONSISTENCY_AUDIT.md  MACOS_BACKGROUND_AUDIT.md  MODULES_STATE_AUDIT.md  OFFLINE_AND_LOG_INTEGRITY.md  OS_LEVEL_INTEGRATION_AUDIT.md  (+14 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  idle.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: auth.rs  commands.rs  database.rs  ipc.rs  lib.rs  main.rs  models.rs  monitor.rs  network.rs  tests.rs
src-tauri/src/engine/: core.rs  db.rs  mod.rs
src-tauri/src/sync/: mod.rs
(+415 files in other folders)
