[package]
name = "hubnity"
version = "0.1.24"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hubnity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-cors-fetch = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
screenshots = "0.7"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
system-idle-time = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
objc = "0.2"

[lints.rust]
# Suppress warning from objc crate's internal cfg(cargo-clippy) usage
unexpected_cfgs = "allow"

[package.metadata.rust-analyzer]
# Tauri sets cfg(desktop) at build time; rust-analyzer needs it for desktop-only code (updater, process)
rustc-flags = ["--cfg", "desktop"]
